https://github.com/LiveHelperChat/livehelperchat/issues/370

3. Instead of banning e-mails which are very easy to fake, there is option to ban not only single ip but also IP ranges.
https://github.com/LiveHelperChat/livehelperchat/issues/546

4. Will be recorded time when user has left a chat
https://github.com/LiveHelperChat/livehelperchat/issues/535


2.14v

This release is maintenence release with few enhancements

1. Option to pass identifier. It can be either some specific value or if not provided it will be referer URL.
Also new variable in template can be used {url_view} it will be link to filled form view instead of download link.
https://github.com/LiveHelperChat/livehelperchat/issues/563
2. Chat window in browsing information tab will show is user on page still or not. Option "Track is user still on site, chat status checks also has to be enabled" has to be enabled.
3. Different message will be shown then user starts chat from chat popup instead of chat widget. Like then user navigates to another window from widget it's shown URL to which he navigated. Then user decides to open popup for chat it will be different message.
4. Invitation to chat will also pay attention to additional fields attributes. https://github.com/LiveHelperChat/livehelperchat/issues/540
5. Proactive messages retargeting. In returning message field you can enter {nick}, if we will find a previous chat associated with this online user, nick from previous chat will be used if not proactive invitation nick field value will be used. 
https://github.com/LiveHelperChat/livehelperchat/issues/544

execute doc/update_db/update_92.sql for update

2.13v

This realease is maintenence release with a lot of small changes.

1. Updated xml module to return unread chats list also
2. Move events for NodeJs extension
3. Changed autoload mechanism to be compatible with third party autoloads. Replace index.php file
4. XML module was missing some callbacks which are present in web interface